app/src/main/res/raw/editor_style.css
html {
    caret-color: var(--kmail-primary-color);
    /* overflow-x needs to be in both the html and the body for the whole email to scroll. */
    overflow-x: auto !important;
}

body {
    /* overflow-x needs to be in both the html and the body for the whole email to scroll. */
    /* To have the spacing scroll with the mail it needs to be padding and not margin. */
    overflow-x: auto !important;
    margin: 0;
    padding: 16px;
}

